--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,16 @@
 all: server.class client.class
 
-server.class: server.java
-	javac server.java
-	
-client.class: client.java
-	javac client.java
-	
+server.class: server/server.java
+	javac server/server.java
+
+client.class: client/client.java
+	javac client/client.java
+
 server:
 	java server
-	
+
 client:
 	java client
-	
+
 clean:
 	rm -f *.class
